// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`upper-case-html-tag.html format 1`] = `
====================================options=====================================
parsers: ["angular"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<!doctype html><HTML></HTML>

=====================================output=====================================
<!DOCTYPE html><HTML></HTML>

================================================================================
`;

exports[`upper-case-html-tag-2.html format 1`] = `
====================================options=====================================
parsers: ["angular"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<!DOCTYPE html><HTML>
  <body>
  </body>
</HTML>

=====================================output=====================================
<!DOCTYPE html>
<HTML>
  <body></body>
</HTML>

================================================================================
`;
